new comm, now adding llm model instead

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,8 @@
 ﻿TELEGRAM_TOKEN=
 MODEL_MODE=templated
 RAG_TOPK=3
+# --- HF LLM settings ---
+MODEL_MODE=templated   # change to hf if youd like to use huggingface model or teplated if you like it scripted
+HF_MODEL_ID=TinyLlama/TinyLlama-1.1B-Chat-v1.0
+MAX_NEW_TOKENS=160
+TEMPERATURE=0.7
