--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,6 @@ scikit-learn==1.5.2
 PyYAML==6.0.2
 python-dotenv==1.0.1
 jinja2==3.1.4
+transformers==4.44.2
+huggingface-hub==0.24.6
+safetensors==0.4.5
